--- a/Rumor_check.ipynb
+++ b/Rumor_check.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "# 2. define chat prompt\n",
     "from langchain_core.prompts import ChatPromptTemplate\n",
-    "comment = \"손흥민은 축구를 정말 못한다. 당장 퇴출시켜야한다. 손흥민 요새 탁구만 친다더니 폼이 많이 죽은 듯. 손흥민은 결정력이 너무 부족함.\"\n",
+    "comment = \"손흥민은 축구를 정말 못한다. 당장 퇴출시켜야한다. 손흥민 이혼하고 나서 폼이 많이 죽은 듯. 손흥민은 결정력이 너무 부족함.\"\n",
     "\n",
     "rag_with_history_prompt = ChatPromptTemplate.from_messages(\n",
     "    [\n",
